--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ build-backend = 'setuptools.build_meta'
 name = 'sbb-oai-status'
 version = '0.0.0'
 dependencies = [
-  'delb'
+  'delb[https-loader]'
 ]
 
 [tool.setuptools]
