--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,10 @@ dependencies = [
 
 [project.optional-dependencies]
 dev = [
-  'pytest-cov'
+  'pytest-cov',
+  'flake8-multiline-containers',
+  'flake8-pyproject',
+  'flake8-simplify',
 ]
 
 [tool.setuptools]
@@ -23,7 +26,20 @@ packages = [
 oai-status = 'oai_status:main'
 oai-list-records = 'oai_status.list_records:main'
 
+
 [tool.pytest.ini_options]
 addopts = '''
   --doctest-modules --cov-report=term-missing --cov=oai_status/
 '''
+
+
+[tool.coverage.report]
+fail_under = 96
+precision = 2
+
+
+[tool.flake8]
+max-line-length = 100
+exclude = [
+  'build', '.venv'
+]
