ci: install python version specified in project config

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ version = '0.0.0'
 dependencies = [
   'delb[https-loader]'
 ]
+requires-python = '>=3.9.0'
+
 
 [project.optional-dependencies]
 dev = [
