--- a/.github/workflows/status.yml
+++ b/.github/workflows/status.yml
@@ -17,7 +17,7 @@ jobs:
 
       - uses: actions/setup-python@v4.7.0
         with:
-          python-version: '3.11'
+          python-version-file: pyproject.toml
       
       - name: install
         run: pip install --user .
