--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,7 +13,7 @@ jobs:
 
       - uses: actions/setup-python@v4.7.0
         with:
-          python-version: '3.11'
+          python-version-file: pyproject.toml
 
       - name: install dev dependencies
         run: pip install --user .[dev]
