:dependabot: add dependency update pull request reviewers

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,8 +7,12 @@ updates:
   - package-ecosystem: github-actions
     directory: '/'
     schedule:
-      interval: monthly
+      interval: weekly
+    commit-message:
+      prefix: ':octocat'
     reviewers:
       - jkatzwinkel
+      - Marcel-Tronco
+      - plasmoit
 
 ...
