--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,11 +4,11 @@ build-backend = 'setuptools.build_meta'
 
 [project]
 name = 'sbb-oai-status'
-version = '0.0.0'
+version = '0.0.1'
 dependencies = [
-  'delb[https-loader]'
+  'delb[https-loader]',
 ]
-requires-python = '>=3.9.0'
+requires-python = '>=3.11.0'
 
 
 [project.optional-dependencies]
