--- a/.github/workflows/status.yml
+++ b/.github/workflows/status.yml
@@ -18,7 +18,8 @@ jobs:
       - uses: actions/setup-python@v6.2.0
         with:
           python-version-file: pyproject.toml
-      
+          cache: pip
+
       - name: install
         run: pip install --user .
 
