--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,6 +14,7 @@ jobs:
       - uses: actions/setup-python@v6.2.0
         with:
           python-version-file: pyproject.toml
+          cache: pip
 
       - name: install dev dependencies
         run: pip install --user .[dev]
@@ -25,4 +26,3 @@ jobs:
         run: python -mflake8
 
 ...
- 
