--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ dev = [
   'pytest-cov==7.0.0',
   'flake8-multiline-containers==0.0.19',
   'flake8-pyproject==1.2.4',
-  'flake8-simplify==0.30.0; python_version<"3.14"',
+  'flake8-simplify==0.30.0',
 ]
 
 [tool.setuptools]
