--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,6 +4,13 @@ version: 2
 
 updates:
 
+  - package-ecosystem: pip
+    directory: '/'
+    schedule:
+      interval: weekly
+    commit-message:
+      prefix: ':dependabot'
+
   - package-ecosystem: github-actions
     directory: '/'
     schedule:
